--- a/github.html
+++ b/github.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>PERFUMY</title>
+<title>DECOR THINGS</title>
 <link rel="stylesheet" href="xternal.css"/>
 </head>
 <body>
@@ -24,31 +24,36 @@
   <section class="products">
     <div class="product-card">
       <img src="C:\Users\DELL\Pictures\decor1.jpeg" alt="Decor 1"/>
-      <p>Use sensory words like 'crisp', 'fresh' or 'warm', 'velvety' or 'soft' versus 'sharp' to describe your sensory experience when smelling a particular note. Perfumers don't like using these terms as they are 'subjective' and 'personal'.</p>
+      <p>Home decor is the art of decorating a living space to make it both functional and aesthetically pleasing. This can include choosing color schemes, selecting furniture and accessories, and arranging items in a room to create a cohesive look and feel.
+      </p>
     </div>
 
     <div class="product-card">
       <img src="C:\Users\DELL\Pictures\decor3.jpeg" alt="Decor 2"/>
-      <p>Eau De Parfum is one of the most popular types of fragrances due to its balance between longevity and subtlety. EDP typically contains 15-20% perfume oil, which makes it last longer on the skin, usually around six to eight hours or more. It’s suitable for evening wear or special occasions.</p>
+      <p>When decorating a home, it's important to consider the function of each room and the needs of the people who will be using it. For example, a living room should be comfortable and inviting, while a home office should be functional and organized.</p>
     </div>
 
     <div class="product-card">
       <img src="C:\Users\DELL\Pictures\decor4.jpeg" alt="Decor 3"/></p>
-      <p>Fruity fragrances are sweet and playful, featuring notes of apple, peach, berries, and tropical fruits. These scents are youthful and fun, making them suitable for casual wear or for adding a touch of freshness to your day.</p>
+      <p>It involves a combination of elements like furniture, lighting, color, and accessories that work together to create a cohesive and stylish atmosphere. Home decor can reflect the personal style of the homeowner, and it can be used to evoke certain moods or emotions.
+      </p>
     </div>
   </section>
 
   <section class="about-us">
     <h2><u>About us</u></h2>
-    <p>Perfume types reflect the concentration of aromatic compounds in a solvent, which in fine fragrance is typically ethanol or a mix of water and ethanol. Various sources differ considerably in the definitions of perfume types. The intensity and longevity of a fragrance is based on the concentration, intensity, and longevity of the aromatic compounds, or perfume oils, used. As the percentage of aromatic compounds increases, so does the intensity and longevity of the scent.
-      Specific terms are used to describe a fragrance's approximate concentration by the percent of perfume oil in the volume of the final product.Lorem ipsum dolor sit, amet consectetur adipisicing elit. At molestias autem aut officiis. Sed, provident natus.</p>
+    <p>Home decor refers to the art and science of enhancing the interior of a building to achieve a healthier and more aesthetically pleasing environment for the people who use the space. It involves a combination of elements like furniture, lighting, color, and accessories that work together to create a cohesive and stylish atmosphere.
+
+
+      Home decor can reflect the personal style of the homeowner, and it can be used to evoke certain moods or emotions. For example, warm colors like red and yellow can create a cozy and inviting atmosphere, while cool colors like blue and green can promote a sense of calm and relaxation.
+      
+      </p>
   </section>
   <div class="CONTACT">
     <h1 align="center"> <u>CONTACT</u></h1>
     <h3 align="center">+91 8073450000</h3>
-    <h3 align="center">perfumy@gmail.com</3>
-    <p align="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-       Quis repellat reiciendis recusandae, excepturi non voluptas dolores harum ut aliquid natus?</p>
+    <h3 align="center">decor@gmail.com</3>
+    <p align="center">When the pandemic hit in 2020, people were forced to stay indoors. Consequently, everyone had a newfound appreciation for nature and greenery. We saw plants becoming an integral part of home interior designs. Biophilic designs, or the use of plants as interior decor elements, is an easy way to make your home look fresh and airy.</p>
   </div>
 
 </body>
